# ghelper

./: Cargo.toml
.github/workflows/: main.yml
src/: cli.rs  main.rs
src/cli/: checkout_branch_args.rs  config_args.rs  console_args.rs  interactive_checkout_args.rs
src/commands/: checkout.rs  clo.rs  config.rs  interactive_checkout.rs  interactive_delete.rs  mod.rs  open.rs  projects.rs  sync.rs  up.rs
src/domain/: app_config.rs
src/infra/: git.rs  mod.rs  project_files.rs  projects.rs
src/os/: exec_output.rs  linux.rs  mod.rs  windows.rs
src/view/: config_form_view.rs  confirm.rs  input.rs  mod.rs  mult_select.rs  select.rs
