[package]
name = "ghelper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
glob = "0.3.3"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
url = "2.5.8"
